--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,29 +15,29 @@
 
       <!-- Notifications Sidenav -->
       <mat-sidenav #notificationSidenav [mode]="mode" position="end">
-        <notifications [id]="userId" [notifications]="(notifications$ | async)" [isEmpty]="isEmpty" (closeSidenav)="closeSidenav($event)"></notifications>
+        <notifications [notifications]="notifications$ | async" [isEmpty]="isEmpty" (closeSidenav)="closeSidenav($event)"></notifications>
       </mat-sidenav>
 
       <mat-toolbar color="primary">
         <div class="navbar-center">
-          <div class="side-nav-menu" *ngIf="isXS">
-            <button mat-button class="menu-icon" (click)="navigationSidenav.toggle()">
+          <div class="side-nav-menu">
+            <button mat-icon-button class="menu-icon" (click)="navigationSidenav.toggle()">
               <mat-icon>menu</mat-icon>
             </button>
           </div>
-          <button mat-button type="button" class="px-0" routerLink="/dashboard/main">
+          <button mat-button type="button" routerLink="/dashboard/main">
             <h3>Shareily</h3>
           </button>
-          <div class="navbar-center ml-3" *ngIf="!isXS && (authState$ | async)">
+          <div class="navbar-center" *ngIf="(authState$ | async)">
             <button mat-button type="button" class="px-0" routerLink="/dashboard/files">
-              <h4>Files</h4>
+              <h3>Files</h3>
             </button>
           </div>
-          <div class="navbar-center ml-3" *ngIf="!isXS && !(authState$ | async)">
-            <button mat-button type="button" class="px-1 mx-1" routerLink="/login">
+          <div class="navbar-center" *ngIf="!(authState$ | async)">
+            <button mat-button type="button" routerLink="/login">
               Login
             </button>
-            <button mat-button type="button" class="px-1 mx-1" routerLink="/register">
+            <button mat-button type="button" routerLink="/register">
               Register
             </button>
           </div>
@@ -71,5 +71,7 @@
     <h2 class="pb-1 pl-2" matSubheader>Actions</h2>
     <mat-divider class="mx-2"></mat-divider>
     <mat-list-item routerLink="/dashboard/files">Files</mat-list-item>
+    <mat-list-item routerLink="/dashboard/main">Home</mat-list-item>
+    <mat-list-item routerLink="/account">Account</mat-list-item>
     <mat-list-item (click)="logout()">Logout</mat-list-item>
   </ng-template>
