Removed Picture component from account module. Fixed issue with notification center styles and positioning in mobile viewport. Added absolutely positioned button to main component to replace the menu bar for file/folder actions

--- a/src/app/modules/account/pages/account/account.component.html
+++ b/src/app/modules/account/pages/account/account.component.html
@@ -14,9 +14,9 @@
                             <mat-tab label="Profile">
                                 <profile></profile>
                             </mat-tab>
-                            <mat-tab label="Picture">
+                            <!-- <mat-tab label="Picture">
                                 <picture></picture>
-                            </mat-tab>
+                            </mat-tab> -->
                             <!-- <mat-tab label="Personal">
                                 <personal-info></personal-info>
                             </mat-tab> -->
