--- a/src/app/modules/dashboard/components/main/main.component.html
+++ b/src/app/modules/dashboard/components/main/main.component.html
@@ -1,20 +1,15 @@
+<div class="main-action-menu" *ngIf="isXS">
+  <button mat-fab color="primary" [matMenuTriggerFor]="actionMenu" (click)="$event.stopPropagation()">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+  <mat-menu #actionMenu="matMenu" xPosition="before">
+    <file-actions [rowSelected]="false" [mode]="2" [userId]="userId" [userName]="(userName$ | async)"></file-actions>
+  </mat-menu>
+</div>
+
 <div class="container-fluid mt-3">
-  <div class="row">
-    <div class="col">
-      <div *ngIf="isXS">
-        <file-actions 
-          [mode]="1" 
-          [cwd]="cwd" 
-          [rowSelected]="rowSelected" 
-          [selection]="selection" 
-          [userId]="userId" 
-          [userName]="userName$ | async"
-        ></file-actions>
-      </div>
-    </div>
-  </div>
   <div class="row mb-3">
-    <div class="col-lg-10 col-md-10 col-sm-12 col-12">
+    <div class="col-lg-10 col-md-9 col-sm-12 col-12">
       <mat-accordion class="example-headers-align" [multi]="true">
         <mat-expansion-panel [expanded]="true">
           <mat-expansion-panel-header>
@@ -84,7 +79,7 @@
 
       </mat-accordion>
     </div>
-    <div class="col-lg-2 col-md-2 col-sm-12 col-12 mb-3 pl-0" *ngIf="!isXS">
+    <div class="col-lg-2 col-md-3 col-sm-12 col-12 mb-3 pl-0 file-actions" *ngIf="!isXS">
       <file-actions
         [mode]="0"
         [cwd]="cwd"
