--- a/src/app/modules/dashboard/components/repository/repository.component.less
+++ b/src/app/modules/dashboard/components/repository/repository.component.less
@@ -1,8 +1,9 @@
 /* Structure */
 
-.repository-container, .repository-wrapper {
-  height: 92%;
-  margin-bottom: 15px;
+.repository-container {
+  height: 100%;
+  width: 100%;
+  padding: 10px;
   background-color: rgb(255, 255, 255)
 }
 
@@ -81,6 +82,7 @@ th, td {
 
 .path-card {
   padding: 8px 18px;
+  margin-bottom: 10px;
 }
 
 
