--- a/src/app/modules/home/components/register/register.component.less
+++ b/src/app/modules/home/components/register/register.component.less
@@ -1,14 +1,21 @@
-.registration-form-container {
+.register-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
+}
+
+mat-form-field {
+  width: 100%;
 }
 
 .mat-card {
   width: 350px;
+  margin: 10px;
 }
 
 .mat-divider-horizontal {
   position: relative !important;
+  margin-bottom: 20px;
 }
 
 
