--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,64 +1,60 @@
-  <!-- <div class="sidenav-container"> -->
-    <mat-sidenav-container fullscreen class="mat-sidenav-container">
+<div class="nav-container" [class.is-mobile]="isXS">
+  <mat-toolbar color="primary" class="nav-toolbar">
+    <button mat-icon-button class="menu-icon" (click)="navigationSidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <button mat-button type="button" routerLink="/dashboard/main">
+      <h3>Shareily</h3>
+    </button>
+    <div class="navbar-center" *ngIf="(authState$ | async)">
+      <button mat-button type="button" class="px-0" routerLink="/dashboard/files">
+        <h3>Files</h3>
+      </button>
+    </div>
+    <div class="navbar-center" *ngIf="!(authState$ | async)">
+      <button mat-button type="button" routerLink="/login">
+        Login
+      </button>
+      <button mat-button type="button" routerLink="/register">
+        Register
+      </button>
+    </div>
+    <span class="spacer"></span>
+    <div class="navbar-end" *ngIf="(authState$ | async)">
+      <button mat-mini-fab type="button" color="warm" class="mat-elevation-z1 mr-3"
+        (click)="navigate('/account')">{{ initials$ | async }}</button>
+      <button mat-icon-button (click)="setNotificationViewState($event)">
+        <mat-icon [matBadge]="(notifications$ | async).length" [matBadgeHidden]="(notificationBadgeViewState$ | async)"
+          matBadgePosition="before" matBadgeColor="accent">notifications_none</mat-icon>
+      </button>
+    </div>
+  </mat-toolbar>
 
-      <!-- Navigation Sidenav -->
-      <mat-sidenav mode="over" #navigationSidenav position="start">
-        <mat-action-list>
-          <button mat-list-item class="float-right close-btn" (click)="navigationSidenav.close()">
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-action-list>
-        <mat-nav-list (click)="navigationSidenav.close()">
-          <div *ngIf="(authState$ | async); then dashboardNav; else homeNav"></div>
-        </mat-nav-list>
-      </mat-sidenav>
-
-      <!-- Notifications Sidenav -->
-      <mat-sidenav #notificationSidenav [mode]="mode" position="end">
-        <notifications [notifications]="notifications$ | async" [isEmpty]="isEmpty" (closeSidenav)="closeSidenav($event)"></notifications>
-      </mat-sidenav>
-
-      <mat-toolbar color="primary">
-        <div class="navbar-center">
-          <div class="side-nav-menu">
-            <button mat-icon-button class="menu-icon" (click)="navigationSidenav.toggle()">
-              <mat-icon>menu</mat-icon>
-            </button>
-          </div>
-          <button mat-button type="button" routerLink="/dashboard/main">
-            <h3>Shareily</h3>
-          </button>
-          <div class="navbar-center" *ngIf="(authState$ | async)">
-            <button mat-button type="button" class="px-0" routerLink="/dashboard/files">
-              <h3>Files</h3>
-            </button>
-          </div>
-          <div class="navbar-center" *ngIf="!(authState$ | async)">
-            <button mat-button type="button" routerLink="/login">
-              Login
-            </button>
-            <button mat-button type="button" routerLink="/register">
-              Register
-            </button>
-          </div>
-        </div>
-        <span class="spacer"></span>
-        <div class="navbar-end" *ngIf="(authState$ | async)">
-          <button mat-mini-fab type="button" color="warm" class="mat-elevation-z1 mr-3" (click)="navigate('/account')">{{ initials$ | async }}</button>
-          <button mat-icon-button (click)="setNotificationViewState($event)">
-            <mat-icon [matBadge]="(notifications$ | async).length" [matBadgeHidden]="(notificationBadgeViewState$ | async)"
-              matBadgePosition="before" matBadgeColor="accent">notifications_none</mat-icon>
-          </button>
-        </div>
-      </mat-toolbar>
-      <!-- <mat-sidenav-content> -->
-        <div class="container-fluid px-0">
-          <router-outlet></router-outlet>
-        </div>
-      <!-- </mat-sidenav-content> -->
-    </mat-sidenav-container>
-  <!-- </div> -->
-
+  <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="isXS ? 56 : 0">
+  
+    <!-- Navigation Sidenav -->
+    <mat-sidenav mode="over" #navigationSidenav position="start" >
+      <mat-action-list>
+        <button mat-list-item class="float-right close-btn" (click)="navigationSidenav.close()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-action-list>
+      <mat-nav-list (click)="navigationSidenav.close()">
+        <div *ngIf="(authState$ | async); then dashboardNav; else homeNav"></div>
+      </mat-nav-list>
+    </mat-sidenav>
+  
+    <!-- Notifications Sidenav -->
+    <mat-sidenav #notificationSidenav [mode]="mode" position="end">
+      <notifications [notifications]="notifications$ | async" [isEmpty]="isEmpty" (closeSidenav)="closeSidenav()">
+      </notifications>
+    </mat-sidenav>
+  
+    <div class="app-container">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-container>
+</div>
 
   <ng-template #homeNav>
     <h2 class="pb-1 pl-2" matSubheader>Account</h2>
