--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,3 +1,33 @@
+.nav-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.is-mobile .nav-toolbar {
+  position: fixed;
+  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
+  z-index: 2;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.sidenav-container {
+  /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
+     causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
+  flex: 1;
+}
+
+.is-mobile .sidenav-container {
+  /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
+     `<body>` to be our scrolling element for mobile layouts. */
+  flex: 1 0 auto;
+}
+
 .menu-icon {
   font-size: 25px;
   padding: 0;
@@ -26,5 +56,16 @@
 
 .spacer {
   flex-grow: 1;
+}
+
+.app-container {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+
+
+::ng-deep .mat-drawer-content {
+  position: static !important;
 }
 
