--- a/src/app/modules/dashboard/components/main/main.component.less
+++ b/src/app/modules/dashboard/components/main/main.component.less
@@ -151,8 +151,37 @@ p.list-info {
   margin: 10px;
 }
 
-.suggestion {
-
-}
 
 /* END Suggestions Section Styles */
+
+
+
+/* File Actions */
+.file-actions {
+  position: absolute;
+  top: 15px;
+  right: 0;
+  min-width: 150px;
+}
+
+
+.main-action-toolbar {
+  position: absolute;
+  padding: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.main-action-menu {
+  position: absolute;
+  z-index: 2;
+  bottom: 10px;
+  right: 10px;
+}
+
+.mat-mini-fab {
+  padding: 0 !important;
+}
+
+/* End File Actions */
