--- a/src/app/modules/home/components/login/login.component.html
+++ b/src/app/modules/home/components/login/login.component.html
@@ -1,42 +1,40 @@
-<div class="container-fluid mt-4">
-  <div class="row justify-content-center">
-    <div class="col-auto px-0">
-      <mat-card class="px-0">
-        <div class="container-fluid">
-          <div class="row mb-3">
-            <div class="col">
-              <h3>Login</h3>
-              <mat-divider></mat-divider>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="login-form-container">
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div class="login-container">
 
-                  <mat-form-field appearance="outline">
-                    <mat-label>User Name</mat-label>
-                    <input type="email" matInput formControlName="UserName">
-                    <mat-error *ngIf="submitted && c.UserName.errors && c.UserName.invalid">{{ getErrorMessage('UserName', 'required') }}</mat-error>
-                    <mat-error *ngIf="submitted && c.UserName.errors && c.UserName.errors['invalidCharacters']">{{ getErrorMessage('UserName', 'invalidCharacters') }}</mat-error>
-                  </mat-form-field>
-              
-                  <mat-form-field appearance="outline">
-                    <mat-label>Password</mat-label>
-                    <input type="password" matInput formControlName="Password">
-                    <mat-error *ngIf="submitted && c.Password.errors && c.Password.invalid">{{ getErrorMessage('Password', 'required') }}</mat-error>
-                    <mat-error *ngIf="submitted && c.Password.errors && c.Password.errors['invalidCharacters']">{{ getErrorMessage('Password', 'invalidCharacters') }}</mat-error>
-                  </mat-form-field>
-              
-                  <div class="form-group">
-                    <button type="submit" class="float-right" mat-flat-button color="primary">Login</button>
-                  </div>
-                </div>
-              </form>
-            </div>
+    <mat-card>
+      <div class="login">
+
+        <div class="login-title">
+          <h3>Login</h3>
+        </div>
+
+        <mat-divider></mat-divider>
+
+        <div class="login-controls">
+
+          <mat-form-field appearance="outline">
+            <mat-label>User Name</mat-label>
+            <input type="email" matInput formControlName="UserName">
+            <mat-error *ngIf="submitted && c.UserName.errors && c.UserName.invalid">
+              {{ getErrorMessage('UserName', 'required') }}</mat-error>
+            <mat-error *ngIf="submitted && c.UserName.errors && c.UserName.errors['invalidCharacters']">
+              {{ getErrorMessage('UserName', 'invalidCharacters') }}</mat-error>
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input type="password" matInput formControlName="Password">
+            <mat-error *ngIf="submitted && c.Password.errors && c.Password.invalid">
+              {{ getErrorMessage('Password', 'required') }}</mat-error>
+            <mat-error *ngIf="submitted && c.Password.errors && c.Password.errors['invalidCharacters']">
+              {{ getErrorMessage('Password', 'invalidCharacters') }}</mat-error>
+          </mat-form-field>
+
+          <div class="login-actions">
+            <button type="submit" mat-flat-button color="primary">Login</button>
           </div>
         </div>
-      </mat-card>
-    </div>
+      </div>
+    </mat-card>
   </div>
-</div>
+</form>
