--- a/src/app/modules/home/components/login/login.component.less
+++ b/src/app/modules/home/components/login/login.component.less
@@ -1,10 +1,25 @@
-.login-form-container {
+
+.login-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+
+.login {
   display: flex;
   flex-direction: column;
 }
 
+h3 {
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
 .mat-card {
-  width: 350px;
+  max-width: 350px;
+  margin: 20px;
+  display: block;
 }
 
 .mat-divider-horizontal {
@@ -16,4 +31,28 @@
   .mat-card {
     width: 100%;
   }
+}
+
+.login-controls {
+  margin-top: 20px;
+}
+
+.mat-form-field {
+  width: 100%;
+}
+
+.login-actions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+
+.login-info {
+  width: 100%;
+}
+
+.login-account {
+  margin: 10px;
 }
