--- a/src/app/modules/notifications/pages/notifications/notifications.component.less
+++ b/src/app/modules/notifications/pages/notifications/notifications.component.less
@@ -1,15 +1,16 @@
 .notifications-container {
-    // display: flex;
-    // flex-direction: column;
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    overflow-y: hidden;
+    // overflow-y: hidden;
 }
 
 .notifications {
-    height: 92%;
+    // height: 92%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: scroll;
 }
 
 .notification-items {
@@ -46,17 +47,17 @@
     align-items: center;
     background-color: rgba(255, 255, 255, 0.7);
     // margin-bottom: 10px;
-    margin-top: 10px;
+    margin: 10px;
     // align-items: flex-end;
 
 }
 
 .notification-heading {
-    margin: 10px 10px;
-    height: 4%;
+    margin: 10px;
+    height: 45px;
     background-color: rgba(255, 255, 255, 0.7);
-    padding-bottom: 10px;
-    border-bottom: 1px solid darkgrey;
+    // padding-bottom: 10px;
+    // border-bottom: 1px solid darkgrey;
     
 }
 
@@ -73,15 +74,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 10px
+    // margin-bottom: 10px
 }
 
-h4.heading-title {
+h2.heading-title {
     margin-bottom: 0;
 }
+
+
 
 .close-notifications {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-right: 0
 }
