Fixed issue with notification component css, where action buttons were not aligning on the bottom. Updated ngOnChanges method in notifications component where notificationType property is checked for 'Default' string match in order to set isEmpty property. Fixed bug in deleteAllNotifications method, where userId was not being passed to the dispatch method

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,8 +45,8 @@
     </mat-sidenav>
   
     <!-- Notifications Sidenav -->
-    <mat-sidenav #notificationSidenav [mode]="mode" position="end">
-      <notifications [notifications]="notifications$ | async" [isEmpty]="isEmpty" (closeSidenav)="closeSidenav()">
+    <mat-sidenav #notificationSidenav [mode]="'over'" position="end">
+      <notifications [notifications]="notifications$ | async" (closeSidenav)="closeSidenav()">
       </notifications>
     </mat-sidenav>
   
