updated suggestions section with carousel style file display

--- a/src/app/modules/dashboard/components/main/main.component.html
+++ b/src/app/modules/dashboard/components/main/main.component.html
@@ -18,9 +18,14 @@
           <mat-divider></mat-divider>
 
           <div class="suggestions">
-            <div *ngFor="let suggestion of (suggestions$ | async); index as i">
+            <div *ngFor="let suggestion of (suggestions$ | async); index as i; trackBy: trackByFn">
               <div class="suggestion">
-                {{ suggestion.Name }}
+                <div class="suggestion-thumbnail" [ngStyle]="{ 'background-image': setResource(suggestion.Name, suggestion.Type, 3) }">
+                  
+                </div>
+                <div class="suggestion-title">
+                  <p class="suggestion-name">{{ suggestion.Name }}</p>
+                </div>
               </div>
             </div>
           </div>
