--- a/src/app/modules/notifications/pages/notifications/notifications.component.less
+++ b/src/app/modules/notifications/pages/notifications/notifications.component.less
@@ -11,6 +11,7 @@
     flex-direction: column;
     justify-content: space-between;
     overflow-y: scroll;
+    margin-bottom: auto;
 }
 
 .notification-items {
