Fixed bug in main component where deleting all files and reverting back to default state would display incorrect view state.

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -8,6 +8,10 @@
   right: 0;
 }
 
+.mat-drawer, ::ng-deep .mat-drawer-backdrop {
+  z-index: 150 !important;
+}
+
 .is-mobile .nav-toolbar {
   position: fixed;
   /* Make sure the toolbar will stay on top of the content as it scrolls past. */
