--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <h3>Shareily</h3>
     </button>
     <div class="navbar-center" *ngIf="(authState$ | async)">
-      <button mat-button type="button" class="px-0" routerLink="/dashboard/files">
+      <button mat-button type="button" routerLink="/dashboard/files">
         <h3>Files</h3>
       </button>
     </div>
