Continued working on the file sharing feature; starting with the form, structure of the data + storage format, and styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
     <button mat-button type="button" routerLink="/dashboard/main">
-      <h3>Shareily</h3>
+      <h3>Coolshare</h3>
     </button>
     <div class="navbar-center" *ngIf="(authState$ | async)">
       <button mat-button type="button" routerLink="/dashboard/files">
