--- a/src/app/modules/dashboard/components/file-actions/file-actions.component.less
+++ b/src/app/modules/dashboard/components/file-actions/file-actions.component.less
@@ -8,12 +8,12 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  margin-bottom: 10px;
 }
 
 .m-toolbar, .mat-button {
   padding: 0 8px;
 }
-
 
 
 .list-icon {
