--- a/src/app/modules/dashboard/components/new-folder/new-folder.component.less
+++ b/src/app/modules/dashboard/components/new-folder/new-folder.component.less
@@ -58,9 +58,9 @@ h2.mat-dialog-title {
 
 .invitees {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin: 5px
 }
 
 .invitee-actions {
@@ -119,7 +119,7 @@ h2.mat-dialog-title {
 .dialog-actions {
     display: flex;
     justify-content: flex-end;
-    padding-bottom: 24px;
+    padding-bottom: 12px;
     padding-top: 10px;
 }
 
