--- a/src/app/modules/dashboard/components/new-folder/new-folder.component.html
+++ b/src/app/modules/dashboard/components/new-folder/new-folder.component.html
@@ -17,36 +17,36 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Name this folder</mat-label>
                     <input matInput placeholder="Placeholder" formControlName="FolderName">
+                    <mat-error *ngIf="submitted && c.FolderName.errors && c.FolderName.errors.required">
+                        a foldername is required
+                    </mat-error>
                     <mat-hint>{{ checkDevMode() }}/{{ userName }}/{{ shareName | lowercase }}</mat-hint>
                     <!-- <mat-hint>Hint</mat-hint> -->
                 </mat-form-field>
             </div>
     
-            <!-- <div *ngIf="mode === 1">
-                <p>Your share is accesssible at:</p>
-                <span>{{ checkDevMode() }}/{{ userName }}/{{ shareName | lowercase }}</span>
-            </div> -->
-    
-            <mat-list>
-                <h3 mat-subheader class="list-subheader">Who has access</h3>
-                <mat-divider class="divider-spacing"></mat-divider>
-                <mat-radio-group color="primary" formControlName="Accessibility" [value]="0" (change)="setMode($event)">
-                    <mat-radio-button [value]="0" class="mb-2">
-                        <mat-list-item>
-                            <h4 mat-line>Only You</h4>
-                            <p mat-line>Only you can access this folder</p>
-                        </mat-list-item>
-                    </mat-radio-button>
-                    <mat-radio-button [value]="1">
-                        <mat-list-item>
-                            <h4 mat-line>Group of people</h4>
-                            <p mat-line>Share this folder with a group of people</p>
-                        </mat-list-item>
-                    </mat-radio-button>
-                </mat-radio-group>
-            </mat-list>
+            <div class="share-access">
+                <mat-list>
+                    <h3 mat-subheader class="list-subheader">Who has access</h3>
+                    <mat-divider class="divider-spacing"></mat-divider>
+                    <mat-radio-group color="primary" formControlName="Accessibility" [value]="0" (change)="setMode($event)">
+                        <mat-radio-button [value]="0" class="mb-2">
+                            <mat-list-item>
+                                <h4 mat-line>Only You</h4>
+                                <p mat-line>Only you can access this folder</p>
+                            </mat-list-item>
+                        </mat-radio-button>
+                        <mat-radio-button [value]="1">
+                            <mat-list-item>
+                                <h4 mat-line>Group of people</h4>
+                                <p mat-line>Share this folder with a group of people</p>
+                            </mat-list-item>
+                        </mat-radio-button>
+                    </mat-radio-group>
+                </mat-list>
+            </div>
 
-            <div *ngIf="mode === 1" class="mt-3">
+            <div class="share-settings mt-3" *ngIf="mode === 1">
                 <mat-list>
                     <h3 mat-subheader class="list-subheader">Folder Settings</h3>
                     <mat-divider class="divider-spacing"></mat-divider>
@@ -91,8 +91,8 @@
                         <div class="folder-settings">
                             <div class="settings-permissions">
                                 <mat-list>
-                                    <mat-radio-group color="primary" formControlName="Permissions">
-                                        <mat-radio-button class="permission" *ngFor="let permission of permissions; index as i" [value]="i">
+                                    <mat-radio-group color="primary" formControlName="Permissions" (change)="setPermissionState($event)">
+                                        <mat-radio-button class="permission" *ngFor="let permission of permissions; index as i" [value]="permission.mode">
                                             <mat-list-item>
                                                 <h4 mat-line>{{ permission.type }}</h4>
                                                 <p mat-line>{{ permission.subtitle }}</p>
@@ -108,7 +108,6 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </div>
-    
         </mat-dialog-content>
 
         <mat-divider></mat-divider>
