Fixed bug in main component where the username was not being passed to the new-folder dialog component

--- a/src/app/modules/dashboard/components/main/main.component.html
+++ b/src/app/modules/dashboard/components/main/main.component.html
@@ -94,7 +94,7 @@
       </mat-accordion>
     </div>
     <div class="col-lg-2 col-md-3 col-sm-12 col-12 mb-3 pl-0 file-actions" *ngIf="!isXS">
-      <file-actions [mode]="3" [cwd]="cwd" [userId]="userId" [userName]="(userName$ | async)"></file-actions>
+      <file-actions [mode]="3" [cwd]="cwd" [userId]="userId" [userName]="userName"></file-actions>
     </div>
   </div>
 </div>
