--- a/src/app/modules/dashboard/components/repository/repository.component.html
+++ b/src/app/modules/dashboard/components/repository/repository.component.html
@@ -174,6 +174,7 @@
           </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item>Share</button>
+            <button mat-menu-item (click)="showInfoDialog(row.Name)">Info</button>
             <button mat-menu-item (click)="downloadItem(row.Name)" download>Download</button>
             <button mat-menu-item (click)="setFavoriteState(row)">Star</button>
             <button mat-menu-item (click)="renameEntity(row)">Rename</button>
