--- a/src/app/modules/dashboard/components/new-folder/new-folder.component.html
+++ b/src/app/modules/dashboard/components/new-folder/new-folder.component.html
@@ -91,8 +91,8 @@
                         <div class="folder-settings">
                             <div class="settings-permissions">
                                 <mat-list>
-                                    <mat-radio-group color="primary" formControlName="Permissions" (change)="setPermissionState($event)">
-                                        <mat-radio-button class="permission" *ngFor="let permission of permissions; index as i">
+                                    <mat-radio-group color="primary" formControlName="Permissions">
+                                        <mat-radio-button class="permission" *ngFor="let permission of permissions; index as i" [value]="i">
                                             <mat-list-item>
                                                 <h4 mat-line>{{ permission.type }}</h4>
                                                 <p mat-line>{{ permission.subtitle }}</p>
