--- a/src/app/modules/dashboard/components/main/main.component.less
+++ b/src/app/modules/dashboard/components/main/main.component.less
@@ -27,9 +27,11 @@
 /* General Styles */
 
 @media only screen and (max-width: 750px) {
+
   .ghost-toggle {
     display: inline-block;
   }
+
 }
 
 @media only screen and (min-width: 749px) {
@@ -164,6 +166,7 @@ p.list-info {
   flex-direction: row;
   overflow-x: scroll;
   margin: 10px;
+  padding: 15px;
 }
 
 .suggestion {
